# simple-shape-manager

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  circle.hpp  main.cpp  rectangle.hpp  shape.hpp  shape_manager.hpp  shape_manager_window.hpp  square.hpp
